tests/errors/optional_01.joyeer
// Type annotation missing in variable declaration
var index

// nil requires a contextual type
var index1 = nil

// 'nil' cannot initialize specified type 'Int'
var index2:Int = nil


